--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ li a{
 header {
     width: 100vw;
     height: 100vh;
-    background-image: url('img/new-york-city4.jpg');
+    background-image: url('img/Madrid-street3.jpg');
     background-position: bottom;
     background-size: cover;
     display: flex;
