--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@ a {
     color: azure;
 }
 
-a:hover,
-a:focus {
+a:hover{
     color: bisque;
     background: rgba(255, 123, 0, 0.349)
 }
@@ -18,16 +17,20 @@ a:focus {
 /*NAVEGATION*/
 
 .navbar {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: flex;
     width: 100%;
     justify-content: space-between;
-    padding: 1.5rem;
+    padding: 1rem;
     color: azure;
+    background-color: rgba(0, 0, 0, 0.521);
 }
-
+.logo{
+    margin: 0 2rem;
+    padding: 0.7rem 0;
+}
 ul {
     list-style: none;
 }
@@ -45,6 +48,8 @@ li a{
     padding: 0.7rem 1rem;
     border-radius: 0.5rem;
 }
+
+/*HEADER*/
 
 header {
     width: 100vw;
@@ -84,4 +89,44 @@ header {
     background: crimson;
     border-radius: 0.7rem;
     padding: 0.6rem 1.7rem;
+}
+
+/*MAIN*/
+
+main{
+    width: 100vw;
+    height: 100vh;
+}
+.galeria{
+    width: 100vw;
+    max-width: 1080px;
+    height: 100vh;
+    margin: 1rem auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 15rem;
+    grid-gap: 1rem;    
+}
+
+.galeria, .box-img, figure {
+    width: 100%;
+    height: 100%;
+}
+
+.galeria, .box-img, img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 1s;
+}
+
+figure img:hover{
+    transform: scale(1.1);
+}
+
+.galeria .box-img:nth-child(1){
+    grid-column-start: span 2;
+}
+.galeria .box-img:nth-child(4){
+    grid-row-start: span 2;
 }
