--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ a {
     color: azure;
 }
 
-a:hover{
+.nav-list a:hover{
     color: bisque;
     background: rgba(255, 123, 0, 0.349)
 }
@@ -33,8 +33,8 @@ a:hover{
     font-size: 1.5rem;
     cursor: pointer;
     transition: 0.5s;
+    
 }
-
 .logo:hover{
     transform: scale(1.4);
     color:gold;
@@ -91,6 +91,10 @@ header {
     font-size: 6vmin;
     margin-bottom: 1rem;
 }
+.ctn:hover{
+    color: bisque;
+    background: rgba(255, 123, 0, 0.349);
+}
 
 .ctn {
     color: azure;
@@ -103,7 +107,6 @@ header {
 
 main{
     width: 100vw;
-    /* height: 100vh; */
 }
 .galeria{
     width: 100vw;
@@ -142,7 +145,8 @@ figure img:hover{
 /* VIDEOS */
 
 .media{
-    background-color:rgba(0, 0, 0, 0.815);
+    width: 100vw;
+    background-color: rgb(0, 0, 14);
     margin: 3rem 0;
 }
 
@@ -175,7 +179,7 @@ figure img:hover{
 }
 
 footer{
-    width: 1000px;
+    width: 100vw;
     height: 200px;
-    background-color: rgb(227, 236, 236);
+    background-color: rgb(0, 0, 0);
 }
