--- a/style2.css
+++ b/style2.css
@@ -20,8 +20,7 @@
     width: 50%;
     max-height:100vh;
     text-align: center;
-    margin: auto 1rem;
-    
+    margin: auto 1rem;      
 }
 .article-about h1{
     font-size: 6vmin; 
@@ -33,4 +32,10 @@ img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.buttons{
+    display: flex;
+    justify-content: space-evenly;
+    
 }
