--- a/style.css
+++ b/style.css
@@ -56,6 +56,17 @@ li a{
     padding: 0.7rem 1rem;
     border-radius: 0.5rem;
 }
+.ctn:hover{
+    color: bisque;
+    background: rgba(255, 123, 0, 0.349);    
+}
+
+.ctn {       
+    color: azure;
+    background: crimson;
+    border-radius: 0.7rem;
+    padding: 0.6rem 1.7rem;      
+}
 
 /*HEADER*/
 
@@ -89,18 +100,21 @@ header {
 
 .header-content h1 {
     font-size: 6vmin;
-    margin-bottom: 1rem;
-}
-.ctn:hover{
-    color: bisque;
-    background: rgba(255, 123, 0, 0.349);    
+    margin-bottom: 2rem;
 }
 
-.ctn {       
-    color: azure;
+.about{
+    position: relative;
+    font-size: 2rem;
     background: crimson;
-    border-radius: 0.7rem;
-    padding: 0.6rem 1.7rem;      
+    color: black;
+    padding: 0.2rem 2rem;
+    border-radius: 0.5rem;
+    transition: 0.5s;
+}
+.about:hover{
+    letter-spacing: 0.25rem;
+    color: white;
 }
 
 /*MAIN*/
@@ -108,6 +122,28 @@ header {
 main{
     width: 100vw;    
 }
+
+.adventure{
+    width: 100%;
+    margin: 4rem 0;
+    padding-top: 5rem;   
+}
+.h2_adventure{
+    text-align: center;
+    font-size: 4vmin;
+}
+.line2{
+    width: 50vmin;
+    height: 0.3rem;
+    margin: 0.2rem auto 1rem auto;
+    background-color: crimson;
+}
+.h3_adventure{
+    text-align: center;
+    font-size: 8vmin;
+    margin: 0 2vmin;
+}
+
 .galeria{
     width: 100vw;
     max-width: 1080px;
@@ -157,10 +193,11 @@ figure img:hover{
     padding: 0 3rem;
 }
 .h2_cnc{
-    font-size: 5vmin;
+    font-size: 5vmin;    
 }
 .p_cnc{
     font-size: 2vmin;
+    margin: 2rem auto;
 }
 
 /* LETS WORK TOGETHER */
@@ -263,5 +300,12 @@ address{
     }
     .box-form, .mapa{
         width: 100%;
+    }
+    .h3_adventure{
+        margin: 0 1rem;
+    }
+    .cnc_work a{
+        font-size: 1rem;
+        padding: 0.2rem 0.5rem;
     }
 }
