--- a/style3.css
+++ b/style3.css
@@ -3,6 +3,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+a{
+    text-decoration: none;
+    color: black;
+}
 
 /*NAVEGATION*/
 
@@ -16,7 +20,7 @@
     padding: 1rem;
     color: azure;
     z-index: 10;
-    background-color: rgba(0, 0, 0, 0.685);
+    background-color: rgb(255, 255, 255);
     transition: all 0.7s ease-in-out;
 }
 .logo{
@@ -29,7 +33,7 @@
 }
 .logo:hover{
     transform: scale(1.4);
-    color:gold;
+    color:rgba(10, 4, 19, 0.541);
 }
 ul {
     list-style: none;
@@ -38,8 +42,9 @@ ul {
     display: flex;
 }
 .nav-list a:hover{
-    color: bisque;
-    background: rgba(255, 123, 0, 0.349)
+    color: rgb(255, 255, 255);
+    background: rgba(0, 0, 0, 0.349);
+    transition: 0.5s;
 }
 li {
     margin: 0 2rem;
@@ -77,11 +82,19 @@ li a{
 
 /* HEADER */
 
-.header{
-    width: 100%;
-    max-height: 100px;    
-    border: 3px solid green;
-    background-position: bottom;
+header {
+    width: 100vw;
+    height: 400px;
+    background-image: url('img/Madrid-Street.jpg');
+    background-position: center;
     background-size: cover;
-    object-fit: cover;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    filter: grayscale(100%);
+}
+header h1{
+    font-size: 4vmin;
+    color: ghostwhite;
+    margin-bottom: 3rem;
 }
