--- a/style3.css
+++ b/style3.css
@@ -28,17 +28,14 @@ a{
     padding: 0.7rem 0;
     font-size: 1.5rem;
     cursor: pointer;
-    transition: 0.5s;
-    
+    transition: 0.5s;    
 }
 .logo:hover{
     transform: scale(1.4);
     color:rgba(10, 4, 19, 0.541);
 }
-ul {
-    list-style: none;
-}
 .nav-list {
+    list-style: none;
     display: flex;
 }
 .nav-list a:hover{
@@ -46,12 +43,11 @@ ul {
     background: rgba(0, 0, 0, 0.349);
     transition: 0.5s;
 }
-li {
+.nav-list > li {
     margin: 0 2rem;
     padding: 0.7rem 0;
 }
-li a{
-    /* display: block; */
+.nav-list > li a{    
     padding: 0.7rem 1rem;
     border-radius: 0.5rem;
 }
@@ -93,8 +89,33 @@ header {
     justify-content: center;
     filter: grayscale(100%);
 }
+.header-content > div {
+    text-align: center;   
+}
+.header-content img{
+    width: 15vmin;
+    filter: invert(100%);    
+}
 header h1{
     font-size: 4vmin;
     color: ghostwhite;
     margin-bottom: 3rem;
+}
+
+/* MAIN */
+
+main{
+    display: flex;
+    justify-content: center;
+}
+.project-content{
+    width: 30vmin;
+    height: 45vmin;    
+    margin: 3rem 2rem 0;
+    background-color: white;
+    filter: drop-shadow(10px 10px 40px black);
+}
+.img-content{
+    background-color: rgb(203, 230, 230);
+    height: 50%;
 }
