--- a/style2.css
+++ b/style2.css
@@ -14,7 +14,10 @@
     width: 50%;
     max-height: 100%;
     background-position: bottom;
-    background-size: cover;  
+    background-size: cover;
+    background-image: url('img/yo.jpg');
+    background-position: left;
+    
 }
 .article-about{    
     width: 50%;
