--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box; 
+    
 }
 
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;  
 }
 
 a {
     text-decoration: none;
     color: azure;
 }
-
-
 
 /*NAVEGATION*/
 
